# brep

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
include/padt/brep/: body.h  brep.h  edge.h  entityRange.h  face.h  handle.h  loop.h  part.h  shell.h  utility.h  vertex.h
mechanical/BRepExport/BRepExport/: BRepExport.csproj  BRepExport.sln  packages.config
mechanical/BRepExport/BRepExport/Core/: RecentFolderDataStore.cs  Utilities.cs
mechanical/BRepExport/BRepExport/Exporter/: Exporter.cs
mechanical/BRepExport/BRepExport/Properties/: AssemblyInfo.cs
mechanical/BRepExport/BRepExport/Python/: layoutACTPackage.py  main.py
mechanical/BRepExport/BRepExport/XML/: BRepExport.xml
proto/: brep.proto
src/: CMakeLists.txt  brep.cpp  part.cpp
tests/: CMakeLists.txt
